@@ -8,6 +8,7 @@ Improvements:
 
  - User-defined commands no longer needs to always be prefixed with '!'.
  - Add auto-configuration for Cygwin (OS name: CYGWIN_NT-6.1). (GH #92)
+ - Add toggling for display files of untracked directories.
 
 Bug fixes:
 
